--- a/MathTrainerApp/MathTrainerApp/Base.lproj/Main.storyboard
+++ b/MathTrainerApp/MathTrainerApp/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -197,6 +197,16 @@
                                     <constraint firstItem="RdD-wi-zvi" firstAttribute="top" secondItem="QHi-ed-GLv" secondAttribute="bottom" constant="7" id="h31-Wa-xuV"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uOZ-7J-2m2">
+                                <rect key="frame" x="126" y="738" width="141" height="30"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Сбросить прогресс"/>
+                                <connections>
+                                    <action selector="clearButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xiW-sc-Gdq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -204,6 +214,7 @@
                             <constraint firstItem="iib-AB-Vbk" firstAttribute="centerY" secondItem="cMu-Ow-1z9" secondAttribute="centerY" id="0kf-H2-aEH"/>
                             <constraint firstItem="9xi-60-8YL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="-60" id="1J4-vc-6GA"/>
                             <constraint firstItem="9xi-60-8YL" firstAttribute="top" secondItem="1X2-un-MWn" secondAttribute="bottom" constant="70" id="1cU-Vg-DkB"/>
+                            <constraint firstItem="uOZ-7J-2m2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="P2W-Gv-HO5"/>
                             <constraint firstItem="9xi-60-8YL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="TuO-Pc-Muf"/>
                             <constraint firstItem="cMu-Ow-1z9" firstAttribute="centerX" secondItem="9xi-60-8YL" secondAttribute="centerX" id="V5e-8B-R50"/>
                             <constraint firstItem="1X2-un-MWn" firstAttribute="top" secondItem="ZVW-JD-LXb" secondAttribute="bottom" constant="70" id="W0z-vh-yXS"/>
@@ -213,6 +224,7 @@
                             <constraint firstItem="1X2-un-MWn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qyV-zl-XQM"/>
                             <constraint firstItem="ahp-7i-1LS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="60" id="tje-Bq-jQ4"/>
                             <constraint firstItem="ZVW-JD-LXb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="y4k-yd-dX1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uOZ-7J-2m2" secondAttribute="bottom" constant="50" id="yGq-26-KX3"/>
                         </constraints>
                     </view>
                     <connections>
@@ -236,11 +248,11 @@
             <objects>
                 <viewController id="wB9-am-zkh" customClass="TrainViewController" customModule="MathTrainerApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="LTU-EO-8kP">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dry-s3-yRt">
-                                <rect key="frame" x="50" y="109" width="80" height="40"/>
+                                <rect key="frame" x="50" y="50" width="80" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="6kj-9b-2s6"/>
                                     <constraint firstAttribute="width" constant="80" id="Z7h-nJ-jD5"/>
@@ -256,13 +268,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34 + 53 =" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gvO-fq-aat">
-                                <rect key="frame" x="102" y="337.66666666666669" width="189" height="48"/>
+                                <rect key="frame" x="102" y="367" width="189" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYn-Zl-dHB">
-                                <rect key="frame" x="96.666666666666686" y="505.66666666666674" width="80" height="80"/>
+                                <rect key="frame" x="96.666666666666686" y="535" width="80" height="80"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="Hho-CK-48K"/>
@@ -284,7 +296,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mgr-mW-Adn">
-                                <rect key="frame" x="216.66666666666663" y="505.66666666666674" width="80" height="80"/>
+                                <rect key="frame" x="216.66666666666663" y="535" width="80" height="80"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="H5s-LD-QAe"/>
@@ -306,7 +318,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Верных ответов:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ob2-hI-UMA">
-                                <rect key="frame" x="211.66666666666663" y="109" width="131.33333333333337" height="20.333333333333343"/>
+                                <rect key="frame" x="211.66666666666663" y="50" width="131.33333333333337" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -339,7 +351,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CO1-ZS-2yW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="zT9-KA-ZvZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1001" y="-18"/>
+            <point key="canvasLocation" x="1059" y="-10"/>
         </scene>
     </scenes>
     <resources>
